--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;600&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;1,600&display=swap");
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
   outline: none;
 }
-
 html,
 body {
   max-width: 100vw;
